gluecodium/src/test/resources/smoke/errors/output/lime/example/FooBar.lime
package example
import smoke.Errors.Internal
import smoke.SomeTypeCollection.Some
class FooBar {
    static fun methodWithInternalError() throws Internal
    static fun methodWithTypeCollectionError() throws Some
}
